Fixed left sidebar spacing issue

--- a/src/main/resources/static/assets/css/variables.less
+++ b/src/main/resources/static/assets/css/variables.less
@@ -26,7 +26,8 @@
 @top-nav-height: @logo-height;
 @content-width: 90vw;
 @content-height: 100vh;
-
+@logo-padding-width: 10px;
+@logo-padding-height: 5px;
 
 /*********************/
 @black-blue-base-background-color: rgb(45,50,62);
